<resources>
    <string name="app_name">utsBayu</string>
    <string name="ras_anjing">Ras Anjing</string>
    <string name="triseranggapedia">TriSeranggaPedia</string>
    <string name="tekan_gambar_serangga_untuk_membuka_galeri">(Tekan gambar serangga untuk membuka galeri)</string>
    <string name="profil">Profil</string>
    <string name="profilF">PROFIL</string>
    <string name="nama_nnim_nprodi_nfakultas_nhobi">Nama\nNIM\nProdi\nFakultas\nHobi</string>
    <string name="bayu_kartawan_n_200602005_n_teknik_informatika_n_teknik_n_game_online">:Bayu Kartawan\n:200602005\n:Teknik Informatika\n:Teknik\n:Game Online</string>
    <string name="jenis_hewan">Jenis Hewan</string>
    <string name="deskripsi_hewan">Deskripsi hewan</string>
    <string name="jangkrikkal">Jangkrik Kalung</string>
    <string name="bebatuan">Bebatuan</string>
    <string name="jangdes">Jangkrik kalung adalah salah satu jenis jangkrik lokal yang punya warna coklat kehitaman.</string>
    <string name="jangkal">Jangkrik Kalung Ras Jerabang</string>
    <string name="jerami">Jerami</string>
    <string name="jangkaldesc">Jangkrik kalung ras jerabang mempunyai ciri berwarna merah bata.</string>
    <string name="janglung">Jangkrik Kalung Ras Jeliteng</string>
    <string name="janglungdesc">Ras jeliteng mempunyai ciri warna hitam. Iteng diduga berasal dari kata ireng</string>
    <string name="janglam">Jangkrik Alam</string>
    <string name="alam">Alam</string>
    <string name="janglamdesc">Jangkrik alam disebut juga jangkrik rumahan mempunyai warna abu abu kecoklatan.</string>
    <string name="indo">Indonesia</string>
    <string name="jangseldesc">Jangkrik selling atau celiring dikenal dengan nama latin Teleogryllus mitratus.</string>
    <string name="jangmad">Jangkrik Madu (Jamaican Cricket)</string>
    <string name="jangmaddesc">Jangkrik madu punya ciri warna seperti madu. Hitam kecoklatan.</string>
    <string name="belkay">Belalang Kayu ( Hedge Grasshopper )</string>
    <string name="hutan">Hutan</string>
    <string name="descbelkay">\"Belalang ini berukuran saat dewasa mencapai 85 mm dengan warna coklat tua. \"</string>
    <string name="belsem">Belalang Sembah atau Belalang Sentadu</string>
    <string name="cina">china</string>
    <string name="descbelsem">Belalang Sembah atau Belalang Sentadu merupakan serangga dalam ordo Mantodea.</string>
    <string name="belhij">Belalang Hijau</string>
    <string name="sawah">Sawah</string>
    <string name="descbelhij">Atractomorpha crenulata merupakan belalang yang tergolong dalam ordo orthoptera.</string>
    <string name="belbat">Belalang Batu</string>
    <string name="batu">Batu</string>
    <string name="desbelbat">BELALANG yang tampilannya mengagumkan, memiliki corak seperti batu.</string>
    <string name="beldan">Belalang Daun</string>
    <string name="daun">Daun</string>
    <string name="desbeldat">Belalang Daun Belalang yang berkamuflase, dapat diartikan sebagai penyesuaian warna tubuh makhluk hidup.</string>
    <string name="clad">cladonotinae</string>
    <string name="dunia">Dunia</string>
    <string name="desclad">Cladonotinae adalah subfamili wereng tanah yang mengandung lebih dari 70 genera dan 260 spesies yang dideskripsikan. Serangga ini ditemukan di daerah tropis di seluruh dunia.</string>
    <string name="kupuraja">Kupu-kupu raja (Danaus plexippus)</string>
    <string name="berazil">Brazil dan selatan Suriname</string>
    <string name="deskupuraja">menghasilkan empat generasi hanya dalam satu musim panas saja</string>
    <string name="kupusayap">Kupu-kupu bersayap bening (Greta oto)</string>
    <string name="ekuador">Ekuador</string>
    <string name="deskupusayap">bisa membawa hampir 40 kali lipat berat badannya sendiri, bahkan lebih kuat daripada semut.</string>
    <string name="kupuspic">Kupu-kupu spicebush swallowtail (Papilio troilus)</string>
    <string name="nikaragua">Nikaragua dan Kosta Rika</string>
    <string name="deskupuspic">salah satu kupu-kupu terbesar di dunia dengan lebar sayap mencapai 10 cm</string>
    <string name="kupukaiser">Kupu-kupu Kaiser-i-Hind (Teinopalpus imperialis)</string>
    <string name="amerikateang">Amerika Tengah</string>
    <string name="deskupukaisar">memiliki nama yang serupa dengan medali untuk layanan publik di India selama dijajah Inggris.</string>
    <string name="kupucey">Kupu-kupu ceylon rose Sri Lanka (Pachliopta jophon)</string>
    <string name="kolombia">Kolombia</string>
    <string name="deskupucey">sangat terancam punah karena kehilangan habitat.</string>
    <string name="kupuswallo">Kupu-kupu swallowtail</string>
    <string name="jamaika">Jamaika</string>
    <string name="deskupuswallo">adalah kupu-kupu terbesar di Amerika Utara dengan lebar sayap 16 cm.</string>
    <string name="daftar">Daftar Ras Hewan</string>
    <string name="jangsel">jangkrik selling</string>
</resources>