<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    android:background="@drawable/bayu"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/profilF"
        android:textStyle="bold"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:layout_marginBottom="19dp"
        android:src="@drawable/sketch1601973711902" />

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="120dp"
        android:background="#94FFFFFF"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_nnim_nprodi_nfakultas_nhobi"
            android:textSize="19sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bayu_kartawan_n_200602005_n_teknik_informatika_n_teknik_n_game_online"
            android:textSize="19sp" />
    </LinearLayout>





</LinearLayout>