<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/bayu"
    android:padding="24dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/triseranggapedia"
        android:textStyle="bold"
        android:textColor="#250470"
        android:background="#72FFFFFF"
        android:textSize="28sp"
        android:layout_marginBottom="32dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <ImageButton
            android:id="@+id/btn_buka_ras_jangkrik"
            android:padding="16dp"
            android:layout_margin="8dp"
            android:layout_height="150dp"
            android:background="#A8FFFFFF"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:src="@drawable/jangkrik2"
            android:scaleType="fitCenter"
            />
        <ImageButton
            android:id="@+id/btn_buka_ras_belalang"
            android:padding="10dp"
            android:layout_margin="8dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="#A8FFFFFF"
            android:layout_height="150dp"
            android:src="@drawable/belalang1"
            android:scaleType="fitCenter"
            />
        <ImageButton
            android:id="@+id/btn_buka_ras_kupukupu"
            android:padding="15dp"
            android:layout_margin="8dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="#A8FFFFFF"
            android:layout_height="150dp"
            android:src="@drawable/bf1"
            android:scaleType="fitCenter"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tekan_gambar_serangga_untuk_membuka_galeri"
        android:textStyle="italic"
        android:background="#A8FFFFFF"
        android:layout_marginBottom="32dp"
        />
    <LinearLayout
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <Button
            android:id="@+id/btn_activity_main_pindah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/profil"
            android:background="#A8FFFFFF"
            android:onClick="Pindah"
            />
    </LinearLayout>
</LinearLayout>